refactor(language level): REplace Paths.get with Path.of