@@ -18,7 +18,7 @@ package de.dytanic.cloudnet.launcher.cnl.defaults;
 
 import de.dytanic.cloudnet.launcher.cnl.CNLCommand;
 import de.dytanic.cloudnet.launcher.cnl.CNLInterpreter;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Map;
 
 public final class CNLCommandCNL extends CNLCommand {
@@ -30,7 +30,7 @@ public final class CNLCommandCNL extends CNLCommand {
   @Override
   public void execute(Map<String, String> variables, String commandLine, String... args) throws Exception {
     if (args.length > 0) {
-      CNLInterpreter.runInterpreter(Paths.get(String.join(" ", args)), variables);
+      CNLInterpreter.runInterpreter(Path.of(String.join(" ", args)), variables);
     }
   }
 }
